# zimtohrli-py

./: .gitignore  CHANGELOG.md  COMPARISON_TESTING.md  CONTRIBUTING.md  INSTALL_OFFLINE.md  MANIFEST.in  README.md  README_CLEAN.md  TROUBLESHOOTING.md  actual_vs_expected_comparison.py  compare_implementations.py  comprehensive_comparison_test.py  create_zimtohrli_binary_wrapper.py  debug_install.py  demo_comparison_results.py  demo_file_comparison.py  direct_test.py  final_comparison_summary.py  final_comprehensive_test.py  install_clean.sh  install_debug.sh  install_offline.sh  pyproject.toml  quick_comparison_test.py  quick_demo.py  requirements.txt  run_actual_comparison.py  setup.py  setup_clean.py  setup_minimal.py  setup_original_zimtohrli.sh  setup_system_deps.py  show_actual_values.py  simulated_binary_comparison.py  simulated_binary_comparison_report.json  test_comparison_scripts.py  test_comparison_scripts_fixed.py  test_extension_suffix.py  test_install.py  test_results_summary.md  (+2 more)
test_build/: final_test.py  manual_test.py  test_import.py  verify_fix.py
tests/: test_core.py
zimtohrli_py/: __init__.py  audio_utils.py  core.py
zimtohrli_py/src/: CMakeLists.txt  CMakeLists_clean.txt  CMakeLists_offline.txt  CMakeLists_simple.txt  pyohrli.cc  resample.h
